2006-01-11 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* executable.make: allow installing a different .config file for
	executables such as nunit-console.exe that should use a different one
	depending on the profile.

2006-01-05  Raja R Harinath  <rharinath@novell.com>

	* library.make (run-test-lib, run-test-ondotnet-lib): Workaround a
	sed limitation when printing the testsuite log.

2005-12-22  Raja R Harinath  <rharinath@novell.com>

	* library.make (lib_dir): Define to 'compat' if LIBRARY_COMPAT is
	defined, 'lib' otherwise.
	(the_lib): Use it to decide where to place the output library.
	(LIBRARY_PACKAGE): New define.  Install development symlinks for
	compat libraries in a different directory.

2005-12-03  Kornél Pál  <kornelpal@hotmail.com>

	* config-default.make: Corrected default CODEPAGE comment to ISO-8859-1
	  (Latin 1).

2005-11-22  Vladislav Spivak <spivak@mainsoft.com>
	* Missed dependency. 
	<profile>.sources file is supporting #include directive
	Usually it includes common .sources file.
	Let's make it dependency of <profile>.sources

2005-10-03  Raja R Harinath  <rharinath@novell.com>

	* profiles/basic.make (monolite_flag, use_monolite): New.  Used to
	determine if we need to compile with 'monolite' rather than with
	an external mcs.
	(do-profile-check): Simplify.  Remove corlib version testing
	scripts.  Delegate that work to the mono runtime itself.  Split
	off 'monolite' handling into ...
	(do-profile-check-monolite): ... this.

2005-09-27  Kornél Pál  <kornelpal@hotmail.com>

	* config-default.make: Added CODEPAGE that is the default encoding used by
	  compilers.
	* rules.make (USE_MCS_FLAGS, USE_MBAS_FLAGS): Added /codepage.

2005-09-22  Raja R Harinath  <rharinath@novell.com>

	* Makefile (BUILT_FILES): New.
	(all-local ...): Depend on them.
	(clean-local): Relete them.
	(common/Consts.cs): New rule.
	(COMMON_SRCS): Don't distribute common/Consts.cs.

2005-09-12  Raja R Harinath  <rharinath@novell.com>
