@@ -1,22 +1,0 @@
-System/Object.cs
-System/ValueType.cs
-System/Enum.cs
-System/Delegate.cs
-System/MulticastDelegate.cs
-System.Runtime.CompilerServices/RuntimeHelpers.cs
-System/Decimal.cs
-System/DecimalFormatter.cs
-System/MonoType.cs
-System/Array.cs
-System/String.cs
-System/Console.cs
-System/RuntimeTypeHandle.cs
-System/ArgIterator.cs
-System/ICloneable.cs
-System.Collections/Queue.cs
-System.Collections/ICollection.cs
-System.Collections/IEnumerator.cs
-System.Collections/IEnumerable.cs
-System.Collections/IList.cs
-System.Reflection/TargetInvocationException.cs
-System.Security.Permissions/SecurityPermissionAttribute.cs
